--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.1.1",
     "react-router-native": "^6.1.1",
     "react-scripts": "^4.0.3",
+    "redux": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
